# rust-yolov8

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  model.rs  video.rs
