[package]
name = "rust-yolov8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", default-features = false, features = [
  "clock",
  "iana-time-zone",
  "js-sys",
  "std",
  "winapi",
  "windows-targets",
] }
ffmpeg-next = "6.1.1"
half = "2.3.1"
image = { version = "0.24.8", default-features = false, features = [
  "jpeg",
  "png",
  "webp-encoder",
] }
imageproc = { version = "0.23.0", default-features = false }
itertools = "0.12.0"
ndarray = "0.15.6"
ort = "2.0.0-alpha.4"
rand = "0.8.5"
regex = "1.10.2"
rusttype = { version = "0.9.3", default-features = false }
ureq = "2.9.1"
